--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet" href="style.css" />
+
   <head>
     <title>But Why?</title>
 
     <h1>But Why?</h1>
-    <h3>The incoherent ramblings of a <a href=https://github.com/jleung51>software engineering student</a> who gets frustrated at far too many things</h3>
+    <p>
+      The incoherent ramblings of a <a href=https://github.com/jleung51>software engineering student</a> who gets frustrated at far too many things
+    </p>
+
+    <hr/>
   </head>
 
   <body>
-    <h5>Oracle.</h5>
+    <h3>Oracle.</h3>
     <p>
       Why, Oracle? <em>Why do you have to be this way?</em>
     </p>
