--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="style.css" />
-
   <head>
     <title>But Why?</title>
-
-    <h1>But Why?</h1>
-    <p>
-      The incoherent ramblings of a <a href=https://github.com/jleung51>software engineering student</a> who gets frustrated at far too many things
-    </p>
-
-    <hr/>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <h3>Oracle.</h3>
-    <p>
-      Why, Oracle? <em>Why do you have to be this way?</em>
-    </p>
+    <header id = "header">
+      <h1>But Why?</h1>
+      <p>
+        The incoherent ramblings of a <a href=https://github.com/jleung51>software engineering student</a> who gets frustrated at far too many things
+      </p>
+    </header>
+
+    <main>
+      <hr/>
+      <h3>Oracle.</h3>
+      <p>
+        Why, Oracle? <em>Why do you have to be this way?</em>
+      </p>
+    </main>
   </body>
 
 </html>
