--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>But Why?</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
 
   <body>
