Add link to source code

--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@ response = service.users().messages().send(source_email_address, body=mail).exec
           Why, Oracle? <em>Why do you have to be this way?</em>
         </p>
       </section>
+
+      <section>
+        <hr/>
+        <p style="color:grey;">
+          Source code for this website can be found on <a href="https://github.com/jleung51/but-why">GitHub</a>.
+        </p>
+      </section>
     </main>
   </body>
 
